[gd_scene load_steps=41 format=2]

[ext_resource path="res://Desktop/door.gd" type="Script" id=1]
[ext_resource path="res://Desktop/Control.gd" type="Script" id=2]
[ext_resource path="res://Cestino/Cestino.gd" type="Script" id=3]
[ext_resource path="res://icone/Internet_Explorer-Logo.wine.png" type="Texture" id=4]
[ext_resource path="res://icone/folder.png" type="Texture" id=5]
[ext_resource path="res://Desktop/chiusurapt1.png" type="Texture" id=6]
[ext_resource path="res://icone/msn-messenger-logo-1A0536E047-seeklogo.com.png" type="Texture" id=7]
[ext_resource path="res://Desktop/newdooros.png" type="Texture" id=8]
[ext_resource path="res://Desktop/arresto.png" type="Texture" id=9]
[ext_resource path="res://Desktop/riavvio.png" type="Texture" id=10]
[ext_resource path="res://icone/trashbin.png" type="Texture" id=11]
[ext_resource path="res://icone/impostazioni.png" type="Texture" id=12]
[ext_resource path="res://Desktop/sospendi.png" type="Texture" id=13]
[ext_resource path="res://Desktop/sospendi.gd" type="Script" id=14]
[ext_resource path="res://Desktop/Node2D.gd" type="Script" id=15]
[ext_resource path="res://Desktop/Controlspegni.gd" type="Script" id=16]
[ext_resource path="res://Desktop/impostazioni.gd" type="Script" id=17]
[ext_resource path="res://Desktop/Si.gd" type="Script" id=18]
[ext_resource path="res://Cartella_Foto/Cartella_Foto.gd" type="Script" id=19]
[ext_resource path="res://Desktop/NO.gd" type="Script" id=20]
[ext_resource path="res://Mappa/Mappa.gd" type="Script" id=21]
[ext_resource path="res://Desktop/riavvio.gd" type="Script" id=22]
[ext_resource path="res://Desktop/arresto.gd" type="Script" id=23]
[ext_resource path="res://Cartella_Appunti/Cartella_Appunti.gd" type="Script" id=24]
[ext_resource path="res://icone/Sfondo Desktop.png" type="Texture" id=25]
[ext_resource path="res://menuiniziale/arial_narrow_7.ttf" type="DynamicFontData" id=26]
[ext_resource path="res://Desktop/msnpush.png" type="Texture" id=27]
[ext_resource path="res://Desktop/Controlpushmsn.gd" type="Script" id=28]
[ext_resource path="res://Desktop/diariopush.png" type="Texture" id=29]
[ext_resource path="res://Desktop/Messanger.gd" type="Script" id=30]
[ext_resource path="res://Desktop/Sisos.gd" type="Script" id=31]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 26 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 26 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 26 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 26 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 26 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.607843, 0.117647, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.419608, 0.129412, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.419608, 0.129412, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.607843, 0.117647, 0, 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 15 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0 ]
}

[node name="Sfondo" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512, 300 )
scale = Vector2( 0.533854, 0.556482 )
texture = ExtResource( 25 )
normal_map = ExtResource( 25 )

[node name="Control" type="Control" parent="."]
script = ExtResource( 2 )

[node name="impostazioni" type="TextureButton" parent="Control"]
margin_left = 879.0
margin_top = 19.0
margin_right = 1003.0
margin_bottom = 118.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
script = ExtResource( 17 )

[node name="ImpostazioniLabel" type="Label" parent="Control/impostazioni"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 21.0
margin_top = 113.0
margin_right = 105.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( -567, 87 )
custom_fonts/font = SubResource( 1 )
text = "Impostazioni"

[node name="Foto" type="TextureButton" parent="Control"]
margin_left = 462.0
margin_top = 22.0
margin_right = 591.0
margin_bottom = 132.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
script = ExtResource( 19 )

[node name="CartellaFotoLabel" type="Label" parent="Control/Foto"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 52.0
margin_top = 107.0
margin_right = 92.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Foto"

[node name="Appunti" type="TextureButton" parent="Control"]
margin_left = 281.0
margin_top = 24.0
margin_right = 410.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
script = ExtResource( 24 )

[node name="CartellaAppuntiLabel" type="Label" parent="Control/Appunti"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 40.0
margin_top = 107.0
margin_right = 90.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 3 )
text = "Appunti"

[node name="Browser" type="TextureButton" parent="Control"]
margin_left = -6.0
margin_top = 194.0
margin_right = 179.0
margin_bottom = 330.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
script = ExtResource( 21 )

[node name="BrowserLabel" type="Label" parent="Control/Browser"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 66.0
margin_top = 126.0
margin_right = 118.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 4 )
text = "Browser"

[node name="cestino" type="TextureButton" parent="Control"]
margin_left = 878.0
margin_top = 424.0
margin_right = 1009.0
margin_bottom = 565.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true
script = ExtResource( 3 )

[node name="CestinoLabel" type="Label" parent="Control/cestino"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 47.0
margin_top = 150.0
margin_right = 98.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 6 )
text = "Cestino"
autowrap = true
clip_text = true

[node name="door" type="TextureButton" parent="Control"]
margin_top = 513.0
margin_right = 100.0
margin_bottom = 600.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
expand = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Control/door"]
visible = false
position = Vector2( 205, 9 )
scale = Vector2( 0.0666667, 0.052 )
texture = ExtResource( 6 )

[node name="riavvio" type="Button" parent="Control/door"]
visible = false
margin_left = 105.0
margin_top = -16.0
margin_right = 305.0
margin_bottom = 34.0
flat = true
script = ExtResource( 22 )

[node name="Controlriavvio" type="Control" parent="Control/door/riavvio"]
visible = false
margin_left = -301.5
margin_top = 25.5
margin_right = -261.5
margin_bottom = 65.5
script = ExtResource( 16 )

[node name="Siriavv" type="Button" parent="Control/door/riavvio/Controlriavvio"]
margin_left = 529.0
margin_top = -143.0
margin_right = 569.0
margin_bottom = -108.0
rect_pivot_offset = Vector2( 238, 10 )
mouse_default_cursor_shape = 2
text = "SI"
flat = true
script = ExtResource( 18 )

[node name="NOriavv" type="Button" parent="Control/door/riavvio/Controlriavvio"]
margin_left = 955.0
margin_top = -146.0
margin_right = 996.0
margin_bottom = -107.0
rect_pivot_offset = Vector2( 238, 10 )
mouse_default_cursor_shape = 2
text = "NO"
flat = true
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="Control/door/riavvio/Controlriavvio"]
position = Vector2( 758.5, -263.5 )
scale = Vector2( 0.1675, 0.1645 )
texture = ExtResource( 10 )

[node name="arresto" type="Button" parent="Control/door"]
visible = false
margin_left = 105.0
margin_top = -69.0
margin_right = 305.0
margin_bottom = -18.0
flat = true
script = ExtResource( 23 )

[node name="Controlarresto" type="Control" parent="Control/door/arresto"]
visible = false
margin_left = -301.5
margin_top = 25.5
margin_right = -261.5
margin_bottom = 65.5
script = ExtResource( 16 )

[node name="Si" type="Button" parent="Control/door/arresto/Controlarresto"]
margin_left = 530.0
margin_top = -89.0
margin_right = 567.0
margin_bottom = -54.0
rect_pivot_offset = Vector2( 238, 10 )
mouse_default_cursor_shape = 2
text = "SI"
flat = true
script = ExtResource( 18 )

[node name="NO" type="Button" parent="Control/door/arresto/Controlarresto"]
margin_left = 956.0
margin_top = -93.0
margin_right = 994.0
margin_bottom = -54.0
rect_pivot_offset = Vector2( 238, 10 )
mouse_default_cursor_shape = 2
text = "NO"
flat = true
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="Control/door/arresto/Controlarresto"]
position = Vector2( 757.5, -210.5 )
scale = Vector2( 0.1675, 0.1645 )
texture = ExtResource( 9 )

[node name="sospendi" type="Button" parent="Control/door"]
visible = false
margin_left = 105.0
margin_top = 36.0
margin_right = 305.0
margin_bottom = 87.0
flat = true
script = ExtResource( 14 )

[node name="Controlsospendi" type="Control" parent="Control/door/sospendi"]
visible = false
margin_left = -197.5
margin_top = -43.5
margin_right = -157.5
margin_bottom = -3.5
script = ExtResource( 16 )

[node name="Sisos" type="Button" parent="Control/door/sospendi/Controlsospendi"]
margin_left = 428.0
margin_top = -129.0
margin_right = 463.0
margin_bottom = -90.0
rect_pivot_offset = Vector2( 238, 10 )
mouse_default_cursor_shape = 2
text = "SI"
flat = true
script = ExtResource( 31 )

[node name="NO" type="Button" parent="Control/door/sospendi/Controlsospendi"]
margin_left = 854.0
margin_top = -128.0
margin_right = 891.0
margin_bottom = -91.0
rect_pivot_offset = Vector2( 238, 10 )
mouse_default_cursor_shape = 2
text = "NO"
flat = true
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="Control/door/sospendi/Controlsospendi"]
position = Vector2( 655.5, -245.5 )
scale = Vector2( 0.1675, 0.1645 )
texture = ExtResource( 13 )

[node name="Controlpushmsn" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="Control/Controlpushmsn"]
position = Vector2( 148, 426 )
scale = Vector2( 0.280189, 0.158491 )
texture = ExtResource( 27 )

[node name="chiudipushmsn" type="Button" parent="Control/Controlpushmsn"]
margin_left = 277.0
margin_top = 384.0
margin_right = 297.0
margin_bottom = 402.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "X"

[node name="rimandopushmsn" type="Button" parent="Control/Controlpushmsn/chiudipushmsn"]
margin_left = -277.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
flat = true

[node name="rimandopush2" type="Button" parent="Control/Controlpushmsn/chiudipushmsn"]
margin_top = 18.0
margin_right = 19.0
margin_bottom = 84.0
flat = true

[node name="Controlpushdiario" type="Control" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 28 )

[node name="Sprite" type="Sprite" parent="Control/Controlpushdiario"]
position = Vector2( 148, 426 )
scale = Vector2( 0.280189, 0.158491 )
texture = ExtResource( 29 )

[node name="chiudipushdiario" type="Button" parent="Control/Controlpushdiario"]
margin_left = 277.0
margin_top = 384.0
margin_right = 297.0
margin_bottom = 402.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "X"

[node name="rimandopushdiario" type="Button" parent="Control/Controlpushdiario/chiudipushdiario"]
margin_left = -277.0
margin_bottom = 84.0
mouse_default_cursor_shape = 2
flat = true

[node name="rimandopushdiario2" type="Button" parent="Control/Controlpushdiario/chiudipushdiario"]
margin_top = 18.0
margin_right = 19.0
margin_bottom = 84.0
flat = true

[node name="Messanger" type="TextureButton" parent="Control"]
margin_left = 21.0
margin_top = 22.0
margin_right = 145.0
margin_bottom = 121.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true
script = ExtResource( 30 )

[node name="MessangerLabel" type="Label" parent="Control/Messanger"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 32.0
margin_top = 103.0
margin_right = 116.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( -567, 87 )
custom_fonts/font = SubResource( 1 )
text = "Messanger"

[connection signal="mouse_entered" from="Control/impostazioni" to="Control/impostazioni" method="_on_impostazioni_mouse_entered"]
[connection signal="mouse_exited" from="Control/impostazioni" to="Control/impostazioni" method="_on_impostazioni_mouse_exited"]
[connection signal="pressed" from="Control/impostazioni" to="Control/impostazioni" method="_on_impostazioni_pressed"]
[connection signal="mouse_entered" from="Control/Foto" to="Control/Foto" method="_on_impostazioni_mouse_entered"]
[connection signal="mouse_exited" from="Control/Foto" to="Control/Foto" method="_on_impostazioni_mouse_exited"]
[connection signal="pressed" from="Control/Foto" to="Control/Foto" method="_on_impostazioni_pressed"]
[connection signal="mouse_entered" from="Control/Appunti" to="Control/Appunti" method="_on_impostazioni_mouse_entered"]
[connection signal="mouse_exited" from="Control/Appunti" to="Control/Appunti" method="_on_impostazioni_mouse_exited"]
[connection signal="pressed" from="Control/Appunti" to="Control/Appunti" method="_on_impostazioni_pressed"]
[connection signal="mouse_entered" from="Control/Browser" to="Control/Browser" method="_on_impostazioni_mouse_entered"]
[connection signal="mouse_exited" from="Control/Browser" to="Control/Browser" method="_on_impostazioni_mouse_exited"]
[connection signal="pressed" from="Control/Browser" to="Control/Browser" method="_on_impostazioni_pressed"]
[connection signal="mouse_entered" from="Control/cestino" to="Control/cestino" method="_on_impostazioni_mouse_entered"]
[connection signal="mouse_exited" from="Control/cestino" to="Control/cestino" method="_on_impostazioni_mouse_exited"]
[connection signal="pressed" from="Control/cestino" to="Control/cestino" method="_on_impostazioni_pressed"]
[connection signal="mouse_entered" from="Control/door" to="Control/door" method="_on_door_mouse_entered"]
[connection signal="mouse_exited" from="Control/door" to="Control/door" method="_on_door_mouse_exited"]
[connection signal="pressed" from="Control/door" to="Control" method="_on_door_pressed"]
[connection signal="mouse_entered" from="Control/door/riavvio" to="Control/door/riavvio" method="_on_riavvio_mouse_entered"]
[connection signal="mouse_exited" from="Control/door/riavvio" to="Control/door/riavvio" method="_on_riavvio_mouse_exited"]
[connection signal="pressed" from="Control/door/riavvio" to="Control" method="_on_riavvio_pressed"]
[connection signal="pressed" from="Control/door/riavvio/Controlriavvio/Siriavv" to="Control/door/riavvio/Controlriavvio/Siriavv" method="_on_Siriavv_pressed"]
[connection signal="mouse_entered" from="Control/door/riavvio/Controlriavvio/NOriavv" to="Control" method="_on_NO_mouse_entered"]
[connection signal="mouse_exited" from="Control/door/riavvio/Controlriavvio/NOriavv" to="Control" method="_on_NO_mouse_exited"]
[connection signal="pressed" from="Control/door/riavvio/Controlriavvio/NOriavv" to="Control/door/riavvio/Controlriavvio" method="_on_NO_pressed"]
[connection signal="mouse_entered" from="Control/door/arresto" to="Control/door/arresto" method="_on_arresto_mouse_entered"]
[connection signal="mouse_exited" from="Control/door/arresto" to="Control/door/arresto" method="_on_arresto_mouse_exited"]
[connection signal="pressed" from="Control/door/arresto" to="Control" method="_on_arresto_pressed"]
[connection signal="pressed" from="Control/door/arresto/Controlarresto/Si" to="Control/door/arresto/Controlarresto" method="_on_Si_pressed"]
[connection signal="pressed" from="Control/door/arresto/Controlarresto/NO" to="Control/door/arresto/Controlarresto" method="_on_NO_pressed"]
[connection signal="mouse_entered" from="Control/door/sospendi" to="Control/door/sospendi" method="_on_sospendi_mouse_entered"]
[connection signal="mouse_exited" from="Control/door/sospendi" to="Control/door/sospendi" method="_on_sospendi_mouse_exited"]
[connection signal="pressed" from="Control/door/sospendi" to="Control" method="_on_sospendi_pressed"]
[connection signal="pressed" from="Control/door/sospendi/Controlsospendi/Sisos" to="Control/door/sospendi/Controlsospendi/Sisos" method="_on_Sisos_pressed"]
[connection signal="pressed" from="Control/door/sospendi/Controlsospendi/NO" to="Control/door/sospendi/Controlsospendi" method="_on_NO_pressed"]
[connection signal="pressed" from="Control/Controlpushmsn/chiudipushmsn" to="Control/Controlpushmsn" method="_on_chiudipushmsn_pressed"]
[connection signal="pressed" from="Control/Controlpushmsn/chiudipushmsn/rimandopushmsn" to="Control/Controlpushmsn" method="_on_rimandopushmsn_pressed"]
[connection signal="pressed" from="Control/Controlpushmsn/chiudipushmsn/rimandopush2" to="Control/Controlpushmsn" method="_on_rimandopush2_pressed"]
[connection signal="pressed" from="Control/Controlpushdiario/chiudipushdiario" to="Control/Controlpushdiario" method="_on_chiudipushdiario_pressed"]
[connection signal="pressed" from="Control/Controlpushdiario/chiudipushdiario/rimandopushdiario" to="Control/Controlpushdiario" method="_on_rimandopushdiario_pressed"]
[connection signal="pressed" from="Control/Controlpushdiario/chiudipushdiario/rimandopushdiario2" to="Control/Controlpushdiario" method="_on_rimandopushdiario2_pressed"]
[connection signal="pressed" from="Control/Messanger" to="Control/Messanger" method="_on_Messanger_pressed"]
